Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64265

MouseLeave JavaScript event not triggered when leaving QWebEngineView

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.10.0 RC, 5.9.4
    • 5.9.1, 5.9.2, 5.10
    • WebEngine
    • None
    • 4de8486b6614896a2b84cc64b69606c7b3bd07e8

      The MouseLeave event will not trigger for a web page tag if you move the mouse from inside QWebEngineView to any other part of the interface or the outside of the MainWindow itself.

      Only the initial MouseEnter Javascript event will be triggered and due to the issue detailed above every subsequent event for that tag will not occur.

      You can replicate this issue in the disclosed example by moving the mouse inside the QWebEngineView and moving it to the right. The hover effect will still be in place and the JavaScript code for "onmouseleave" will not be triggered.

      This can also be replicated with any of the Qt examples containing QWebEngineView.

       

      Issue confirmed for Qt 5.9.1 on both Windows and OSX.

        1. webengineview_hover.zip
          3 kB
          Sanjin Lisic
        2. qwebeng_test2.zip
          3 kB
          Sanjin Lisic
        For Gerrit Dashboard: QTBUG-64265
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            sanjin Sanjin Lisic
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes