Notify Chromium about leaving view

Forward QEvent::Leave for Widget and QEvent::HoverLeave for Quick.

Task-number: QTBUG-64265
Change-Id: Ide32768902956476d24b1d4115e305392b62feb3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>