tests/auto/quick/qmltests/qmltests.pro
@@ -59,6 +59,7 @@ OTHER_FILES += \
     $$PWD/data/tst_loadProgress.qml \
     $$PWD/data/tst_loadRecursionCrash.qml \
     $$PWD/data/tst_loadUrl.qml \
+    $$PWD/data/tst_mouseMove.qml \
     $$PWD/data/tst_navigationHistory.qml \
     $$PWD/data/tst_navigationRequested.qml \
     $$PWD/data/tst_newViewRequest.qml \
